syntax = "proto3";

option go_package = "tio.control.v1";

enum JobStatus {
    BuildSucc = 0;
    BuildFailed = 1;
    BuildIng = 2;
    DeployIng = 3;
    DeploySuc = 4;
    DeployFailed = 5;
}

enum CommonRespCode {
    RespSucc = 0;
    RespFaild = -1;
}

message TioReply {
    CommonRespCode code = 1;
    string msg = 2;
}

message TioUserRequest {
    string name = 1;
    string passwd = 2;
}

message TioUserReply {
    CommonRespCode Code = 1;
    TioToken token = 2;
    TioUserInfo user = 3;
}

message TioUserInfo {
    int32 uid = 1;
}

message TioToken {
    string accessKey = 1;
    string secretKey = 2;
    string bucket = 3;
    string callBackUrl = 4;
}