syntax = "proto3";

option go_package = "tio.control.v1";
import "const.proto";

message DeployRequest {
    string image = 1;
    int32 sid = 2;
}

message SrvMeta {
    string name = 1;
}

service TioDeployService {
    rpc NewDeploy (DeployRequest) returns (TioReply) {
    }

    rpc UpdateSrvMeta (SrvMeta) returns (TioReply) {
    }
}